# aiogram-bot-config

./: .gitignore  Makefile  pyproject.toml
app/: main.py
app/api/: lifespan.py  main.py
app/api/routers/: __init__.py  webhook.py
app/api/routers/v1/: __init__.py
app/bot/: __init__.py  lifespan.py  main.py
app/bot/handler/: __init__.py
app/bot/handlers/: __init__.py  locale.py  settings.py  start.py
app/bot/keyboards/inline/: language.py
app/bot/keyboards/reply/: main.py
app/bot/localization/: config.py
app/bot/localization/locales/: message.pot
app/bot/localization/locales/en/LC_MESSAGES/: messages.mo  messages.po
app/bot/localization/locales/uz/LC_MESSAGES/: messages.mo  messages.po
app/bot/middleware/: __init__.py  channel_join_check.py
app/bot/middlewares/: __init__.py
app/core/: logging.py  scheduler.py  settings.py
